feat: edicao de slides